--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>saiteja</title>
 </head>
 <body>
-<h2> hello gonavaram </h2>
+<h2> hello gonavaram learning new things!</h2>
 </body>
 </html>
