--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>saiteja</title>
+	<title>sai teja</title>
 </head>
 <body>
-<h2> hello gonavaram learning new things!</h2>
+<h2> hello gonavaram </h2>
 </body>
 </html>
