--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,11 @@
 	<title>sai teja</title>
 </head>
 <body>
-<h2> hello gonavaram </h2>
+ <h1 style="color: blue;font-size: 60px;text-align: center;" >My first page        </h1>
+  <p  style="color: green; margin: 1 100px 1 100px;font-size: 50px">  very intresting     </p>
+<footer>
+<hr>
+<h2 style="text-align: center;"> hello gonavaram </h2>
+</footer>
 </body>
 </html>
